--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -9,5 +9,15 @@
   "successSignIn": "Berhasil masuk",
   "successSignUp": "Berhasil daftar",
   "successSignOut": "Berhasil keluar",
-  "alreadyHaveAnAccount": "Sudah punya akun?"
+  "successCreateClub": "Berhasil membuat klub",
+  "failedCreateClub": "Gagal membuat klub",
+  "alreadyHaveAnAccount": "Sudah punya akun?",
+  "clubName": "Nama Klub",
+  "clubDescription": "Deskripsi Klub",
+  "clubNameRequired": "Nama klub wajib diisi",
+  "clubDescriptionRequired": "Deskripsi klub wajib diisi",
+  "enterClubName": "Masukkan nama klub",
+  "enterClubDescription": "Masukkan deskripsi klub",
+  "createClub": "Buat Klub",
+  "club": "Klub"
 }
