chore: 🤖 merge with ed81ef4

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -19,5 +19,7 @@
   "enterClubName": "Enter club name",
   "enterClubDescription": "Enter club description",
   "createClub": "Create Club",
-  "club": "Club"
+  "club": "Club",
+  "sportType": "Sport Type",
+  "detail": "Detail"
 }
