--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -29,5 +29,8 @@
   "edit": "Ubah",
   "delete": "Hapus",
   "leave": "Keluar",
-  "about": "Tentang"
+  "about": "Tentang",
+  "clubImageRequired": "Gambar klub wajib diisi",
+  "successCreateProgram": "Berhasil membuat program",
+  "failedCreateProgram": "Gagal membuat program"
 }
