--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -32,5 +32,7 @@
   "about": "Tentang",
   "clubImageRequired": "Gambar klub wajib diisi",
   "successCreateProgram": "Berhasil membuat program",
-  "failedCreateProgram": "Gagal membuat program"
+  "failedCreateProgram": "Gagal membuat program",
+  "successCreateExercise": "Success create exercise",
+  "errorCreateExercise": "Gagal membuat exercise"
 }
