feat: 🎸 add localization to support multiple languages
we provide 2 languange, english and bahasa (indonesia)

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -1,17 +1,20 @@
 {
   "@@locale": "en",
+  "hello": "Hello",
   "signIn": "Sign In",
-  "signOut": "Sign Out",
+  "logout": "Logout",
   "signUp": "Sign Up",
   "failedSignIn": "Failed to sign in",
   "failedSignUp": "Failed to sign up",
-  "failedSignOut": "Failed to sign out",
-  "successSignIn": "Signed in successfully",
-  "successSignUp": "Signed up successfully",
-  "successSignOut": "Signed out successfully",
-  "successCreateClub": "Success Create Club",
+  "failedLogout": "Failed to logout",
+  "successSignIn": "Successfully signed in ",
+  "successSignUp": "Successfully signed up ",
+  "successLogout": "Successfully logged out",
+  "successCreateClub": "Successfully created club",
   "failedCreateClub": "Failed to create club",
   "alreadyHaveAnAccount": "Already have an account?",
+  "dontHaveAnAccount": "Don\t have an account?",
+  "or": "or",
   "clubName": "Club Name",
   "clubDescription": "Club Description",
   "clubNameRequired": "Club name is required",
@@ -20,19 +23,99 @@
   "enterClubDescription": "Enter club description",
   "createClub": "Create Club",
   "club": "Club",
+  "sport": "Sport",
   "sportType": "Sport Type",
+  "volleyBall": "Volleyball",
+  "basketBall": "Basketball",
+  "handBall": "Handball",
+  "soccer": "Soccer",
+  "futsal": "Futsal",  
   "detail": "Detail",
   "back": "Back",
   "join": "Join",
+  "session": "Session",
+  "activeSession": "Active",
+  "expiredSession": "Expired",
   "management": "Management",
   "settings": "Settings",
   "edit": "Edit",
   "delete": "Delete",
   "leave": "Leave",
   "about": "About",
+  "search": "Search",
   "clubImageRequired": "Club image is required",
-  "successCreateProgram": "Success create program",
+  "successCreateProgram": "Successfully create program",
   "failedCreateProgram": "Failed to create program",
-  "successCreateExercise": "Success create exercise",
-  "errorCreateExercise": "Failed to create exercise"
+  "successCreateExercise": "Successfully to create exercise",
+  "errorCreateExercise": "Failed to create exercise",
+  "myClubTraining": "My Club Training",
+  "noClubsFound": "No clubs found",
+  "download": "Download",
+  "general": "General",
+  "language": "Language",
+  "indonesian": "Indonesian",
+  "english": "English",
+  "theme": "Theme",
+  "system": "System",
+  "light": "Light Mode",
+  "dark": "Dark Mode",
+  "user": "User",
+  "editProfile": "Edit Profile",
+  "clubDashboard": "Club Dashboard",
+  "noExpertise": "No expertise",
+  "clubManagement": "Club Management",
+  "name": "Name",
+  "enterYourName": "Enter your name",
+  "nameRequired": "Name is required",
+  "enterYourEmail": "Enter your email",
+  "emailRequired": "Email is required",
+  "invalidEmail": "Invalid email",
+  "password": "Password",
+  "enterYourPass": "Enter your password",
+  "passRequired": "Password is required",
+  "phoneNumber": "Phone Number",
+  "enterYourPhoneNumber": "Enter your phone number",
+  "phoneNumberRequired": "Phone number is required",
+  "invalidPhoneNumber": "Invalid phone number",
+  "history": "History",
+  "overview": "Overview",
+  "clubs": "Clubs",
+  "members": "Members",
+  "programs": "Programs",
+  "exams": "Exams",
+  "program": "Program",
+  "exam": "Exam",
+  "tactical": "Tactical",
+  "invite": "Invite",
+  "assets": "Assets",
+  "leaveClubSuccess": "Successfully leave club",
+  "failedLeaveClub": "Failed to leave club",
+  "establishedAt": "Established at :",
+  "calendar": "Calendar",
+  "noEvents": "No events",
+  "newProgram": "New Program",
+  "enterProgramName": "Enter program name",
+  "programNameRequired": "Program name is required",
+  "startDate": "Start Date",
+  "enterStartDate": "Enter the start date",
+  "startDateRequired": "Start date is required",
+  "endDate": "End Date",
+  "enterEndDate": "Enter the end date",
+  "endDateRequired": "End date is required",
+  "createProgram": "Create Program",
+  "editProgram": "Edit Program",
+  "cancel": "Cancel",
+  "create": "Create",
+  "noUsersFound": "No users found",
+  "addMember": "Add Member",
+  "noMembersFound": "No members found",
+  "athlete": "Athlete",
+  "athletes": "Athletes",
+  "coaches": "Coaches",
+  "coach": "Coach",
+  "add": "Add",
+  "kick": "Kick",
+  "exercise": "Exercise",
+  "question": "Question",
+  "upload": "Upload"
 }
