--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -1,17 +1,20 @@
 {
   "@@locale": "id",
+  "hello": "Halo",
   "signIn": "Masuk",
-  "signOut": "Keluar",
+  "logout": "Keluar",
   "signUp": "Daftar",
   "failedSignIn": "Gagal masuk",
   "failedSignUp": "Gagal daftar",
-  "failedSignOut": "Gagal keluar",
+  "failedLogout": "Gagal keluar",
   "successSignIn": "Berhasil masuk",
   "successSignUp": "Berhasil daftar",
-  "successSignOut": "Berhasil keluar",
+  "successlogout": "Berhasil keluar",
   "successCreateClub": "Berhasil membuat klub",
   "failedCreateClub": "Gagal membuat klub",
   "alreadyHaveAnAccount": "Sudah punya akun?",
+  "dontHaveAnAccount": "Belum punya akun?",
+  "or": "atau",
   "clubName": "Nama Klub",
   "clubDescription": "Deskripsi Klub",
   "clubNameRequired": "Nama klub wajib diisi",
@@ -20,19 +23,99 @@
   "enterClubDescription": "Masukkan deskripsi klub",
   "createClub": "Buat Klub",
   "club": "Klub",
+  "sport": "Olahraga",
   "sportType": "Jenis Olahraga",
+  "volleyBall": "Voli",
+  "basketBall": "Basket",
+  "handBall": "Bola Tangan",
+  "soccer": "Sepak Bola",
+  "futsal": "Futsal",
   "detail": "Rincian",
   "back": "Kembali",
   "join": "Gabung",
+  "session": "Sesi",
+  "activeSession": "Aktif",
+  "expiredSession": "Kadaluarsa",
   "management": "Manajemen",
   "settings": "Pengaturan",
   "edit": "Ubah",
   "delete": "Hapus",
   "leave": "Keluar",
   "about": "Tentang",
+  "search": "Cari",
   "clubImageRequired": "Gambar klub wajib diisi",
   "successCreateProgram": "Berhasil membuat program",
   "failedCreateProgram": "Gagal membuat program",
-  "successCreateExercise": "Success create exercise",
-  "errorCreateExercise": "Gagal membuat exercise"
+  "successCreateExercise": "Berhasil membuat latihan",
+  "errorCreateExercise": "Gagal membuat latihan",
+  "myClubTraining": "Pelatihan Klub Saya",
+  "noClubsFound": "Tidak ada club yang ditemukan",
+  "download": "Unduh",
+  "general": "Umum",
+  "language": "Bahasa",
+  "indonesian": "Bahasa Indonesia",
+  "english": "Bahasa Inggris",
+  "theme": "Tema",
+  "system": "Sistem",
+  "light": "Mode Terang",
+  "dark": "Mode Gelap",
+  "user": "Pengguna",
+  "editProfile": "Ubah Profil",
+  "clubDashboard": "Dasbor Klub",
+  "noExpertise": "Tidak memiliki keahlian",
+  "clubManagement": "Manajemen Klub",
+  "name": "Nama",
+  "enterYourName": "Masukkan nama anda",
+  "nameRequired": "Nama wajib diisi",
+  "enterYourEmail": "Masukkan email anda",
+  "emailRequired": "Email wajib diisi",
+  "invalidEmail": "Email tidak valid",
+  "password": "Kata Sandi",
+  "enterYourPass": "Masukkan kata sandi anda",
+  "passRequired": "Password wajib diisi",
+  "phoneNumber": "Nomor Telepon",
+  "enterYourPhoneNumber": "Masukkan nomor telepon anda",
+  "phoneNumberRequired": "Nomor telepon wajib diisi",
+  "invalidPhoneNumber": "Nomor telepon tidak valid",
+  "history": "Riwayat",
+  "overview": "Ringkasan",
+  "clubs": "Klub",
+  "members": "Anggota",
+  "programs": "Program",
+  "exams": "Tes",
+  "program":"Program",
+  "exam": "Tes",
+  "tactical": "Taktis",
+  "invite": "Undang",
+  "assets": "Asset",
+  "leaveClubSuccess": "Berhasil meninggalkan klub",
+  "failedLeaveClub": "Gagal meninggalkan klub",
+  "establishedAt": "Didirikan pada :",
+  "calendar": "Kalender",
+  "noEvents": "Tidak ada kegiatan",
+  "newProgram": "Program Baru",
+  "enterProgramName": "Masukkan nama program",
+  "programNameRequired": "Nama program wajib diisi",
+  "startDate": "Tanggal Mulai",
+  "enterStartDate": "Masukkan tanggal dimulai",
+  "startDateRequired": "Tanggal mulai wajib diisi",
+  "endDate": "Tanggal Berakhir",
+  "enterEndDate": "Masukkan tanggal berakhir",
+  "endDateRequired": "Tanggal berakhir wajib diisi",
+  "createProgram": "Buat Program",
+  "editProgram": "Ubah Program",
+  "cancel": "Batal",
+  "create": "Buat",
+  "noUsersFound": "Pengguna tidak ditemukan",
+  "addMember": "Tambahkan Anggota",
+  "noMembersFound": "Anggota tidak ditemukan",
+  "athlete": "Atlet",
+  "athletes": "Atlet",
+  "coach": "Pelatih",
+  "coaches": "Pelatih",
+  "add": "Tambah",
+  "kick": "Hapus",
+  "exercise": "Latihan",
+  "question": "Pertanyaan",
+  "upload": "Unggah"
 }
