feat: 🎸 add edit club button

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -117,5 +117,6 @@
   "kick": "Kick",
   "exercise": "Exercise",
   "question": "Question",
-  "upload": "Upload"
+  "upload": "Upload",
+  "editClub": "Edit Club"
 }
