--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -117,5 +117,6 @@
   "kick": "Hapus",
   "exercise": "Latihan",
   "question": "Pertanyaan",
-  "upload": "Unggah"
+  "upload": "Unggah",
+  "editClub": "Ubah Klub"
 }
