refine program feat

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -1,122 +1,127 @@
 {
   "@@locale": "en",
-  "hello": "Hello",
-  "signIn": "Sign In",
-  "logout": "Logout",
-  "signUp": "Sign Up",
-  "failedSignIn": "Failed to sign in",
-  "failedSignUp": "Failed to sign up",
-  "failedLogout": "Failed to logout",
-  "successSignIn": "Successfully signed in ",
-  "successSignUp": "Successfully signed up ",
-  "successLogout": "Successfully logged out",
-  "successCreateClub": "Successfully created club",
-  "failedCreateClub": "Failed to create club",
-  "alreadyHaveAnAccount": "Already have an account?",
-  "dontHaveAnAccount": "Don\t have an account?",
-  "or": "or",
-  "clubName": "Club Name",
-  "clubDescription": "Club Description",
-  "clubNameRequired": "Club name is required",
-  "clubDescriptionRequired": "Club description is required",
-  "enterClubName": "Enter club name",
-  "enterClubDescription": "Enter club description",
-  "createClub": "Create Club",
-  "club": "Club",
-  "sport": "Sport",
-  "sportType": "Sport Type",
-  "volleyBall": "Volleyball",
-  "basketBall": "Basketball",
-  "handBall": "Handball",
-  "soccer": "Soccer",
-  "futsal": "Futsal",  
-  "detail": "Detail",
-  "back": "Back",
-  "join": "Join",
-  "session": "Session",
-  "activeSession": "Active",
-  "expiredSession": "Expired",
-  "management": "Management",
-  "settings": "Settings",
-  "edit": "Edit",
-  "delete": "Delete",
-  "leave": "Leave",
   "about": "About",
-  "search": "Search",
-  "clubImageRequired": "Club image is required",
-  "successCreateProgram": "Successfully create program",
-  "failedCreateProgram": "Failed to create program",
-  "successCreateExercise": "Successfully to create exercise",
-  "errorCreateExercise": "Failed to create exercise",
-  "myClubTraining": "My Club Training",
-  "noClubsFound": "No clubs found",
-  "download": "Download",
-  "general": "General",
-  "language": "Language",
-  "indonesian": "Indonesian",
-  "english": "English",
-  "theme": "Theme",
-  "system": "System",
-  "light": "Light Mode",
-  "dark": "Dark Mode",
-  "user": "User",
-  "editProfile": "Edit Profile",
-  "clubDashboard": "Club Dashboard",
-  "noExpertise": "No expertise",
-  "clubManagement": "Club Management",
-  "name": "Name",
-  "enterYourName": "Enter your name",
-  "nameRequired": "Name is required",
-  "enterYourEmail": "Enter your email",
-  "emailRequired": "Email is required",
-  "invalidEmail": "Invalid email",
-  "password": "Password",
-  "enterYourPass": "Enter your password",
-  "passRequired": "Password is required",
-  "phoneNumber": "Phone Number",
-  "enterYourPhoneNumber": "Enter your phone number",
-  "phoneNumberRequired": "Phone number is required",
-  "invalidPhoneNumber": "Invalid phone number",
-  "history": "History",
-  "overview": "Overview",
-  "clubs": "Clubs",
-  "members": "Members",
-  "programs": "Programs",
-  "exams": "Exams",
-  "program": "Program",
-  "exam": "Exam",
-  "tactical": "Tactical",
-  "invite": "Invite",
-  "assets": "Assets",
-  "leaveClubSuccess": "Successfully leave club",
-  "failedLeaveClub": "Failed to leave club",
-  "establishedAt": "Established at :",
-  "calendar": "Calendar",
-  "noEvents": "No events",
-  "newProgram": "New Program",
-  "enterProgramName": "Enter program name",
-  "programNameRequired": "Program name is required",
-  "startDate": "Start Date",
-  "enterStartDate": "Enter the start date",
-  "startDateRequired": "Start date is required",
-  "endDate": "End Date",
-  "enterEndDate": "Enter the end date",
-  "endDateRequired": "End date is required",
-  "createProgram": "Create Program",
-  "editProgram": "Edit Program",
-  "cancel": "Cancel",
-  "create": "Create",
-  "noUsersFound": "No users found",
+  "activeSession": "Active",
+  "add": "Add",
   "addMember": "Add Member",
-  "noMembersFound": "No members found",
+  "alreadyHaveAnAccount": "Already have an account?",
+  "assets": "Assets",
   "athlete": "Athlete",
   "athletes": "Athletes",
-  "coaches": "Coaches",
+  "back": "Back",
+  "basketBall": "Basketball",
+  "calendar": "Calendar",
+  "cancel": "Cancel",
+  "club": "Club",
+  "clubDashboard": "Club Dashboard",
+  "clubDescription": "Club Description",
+  "clubDescriptionRequired": "Club description is required",
+  "clubImageRequired": "Club image is required",
+  "clubManagement": "Club Management",
+  "clubName": "Club Name",
+  "clubNameRequired": "Club name is required",
+  "clubs": "Clubs",
   "coach": "Coach",
-  "add": "Add",
-  "kick": "Kick",
+  "coaches": "Coaches",
+  "create": "Create",
+  "createClub": "Create Club",
+  "createProgram": "Create Program",
+  "dark": "Dark Mode",
+  "delete": "Delete",
+  "detail": "Detail",
+  "dontHaveAnAccount": "Don\t have an account?",
+  "download": "Download",
+  "edit": "Edit",
+  "editProfile": "Edit Profile",
+  "editProgram": "Edit Program",
+  "emailRequired": "Email is required",
+  "endDate": "End Date",
+  "endDateRequired": "End date is required",
+  "english": "English",
+  "enterClubDescription": "Enter club description",
+  "enterClubName": "Enter club name",
+  "enterEndDate": "Enter the end date",
+  "enterProgramName": "Enter program name",
+  "enterStartDate": "Enter the start date",
+  "enterYourEmail": "Enter your email",
+  "enterYourName": "Enter your name",
+  "enterYourPass": "Enter your password",
+  "enterYourPhoneNumber": "Enter your phone number",
+  "errorCreateExercise": "Failed to create exercise",
+  "establishedAt": "Established at :",
+  "exam": "Exam",
+  "exams": "Exams",
   "exercise": "Exercise",
+  "expiredSession": "Expired",
+  "failedCreateClub": "Failed to create club",
+  "failedCreateProgram": "Failed to create program",
+  "failedEditProgram": "Failed to edit program",
+  "failedLeaveClub": "Failed to leave club",
+  "failedLogout": "Failed to logout",
+  "failedSignIn": "Failed to sign in",
+  "failedSignUp": "Failed to sign up",
+  "futsal": "Futsal",
+  "general": "General",
+  "handBall": "Handball",
+  "hello": "Hello",
+  "history": "History",
+  "indonesian": "Indonesian",
+  "invalidEmail": "Invalid email",
+  "invalidPhoneNumber": "Invalid phone number",
+  "invite": "Invite",
+  "join": "Join",
+  "kick": "Kick",
+  "language": "Language",
+  "leave": "Leave",
+  "leaveClubSuccess": "Successfully leave club",
+  "light": "Light Mode",
+  "logout": "Logout",
+  "management": "Management",
+  "members": "Members",
+  "myClubTraining": "My Club Training",
+  "name": "Name",
+  "nameRequired": "Name is required",
+  "newProgram": "New Program",
+  "noClubsFound": "No clubs found",
+  "noEvents": "No events",
+  "noExpertise": "No expertise",
+  "noMembersFound": "No members found",
+  "noUsersFound": "No users found",
+  "or": "or",
+  "overview": "Overview",
+  "pageNotFound": "Page not found",
+  "passRequired": "Password is required",
+  "password": "Password",
+  "phoneNumber": "Phone Number",
+  "phoneNumberRequired": "Phone number is required",
+  "program": "Program",
+  "programDetail": "Program Detail",
+  "programNameRequired": "Program name is required",
+  "programs": "Programs",
   "question": "Question",
+  "search": "Search",
+  "session": "Session",
+  "settings": "Settings",
+  "signIn": "Sign In",
+  "signUp": "Sign Up",
+  "soccer": "Soccer",
+  "sport": "Sport",
+  "sportType": "Sport Type",
+  "startDate": "Start Date",
+  "startDateRequired": "Start date is required",
+  "succesEditProgram": "Successfully edit program",
+  "successCreateClub": "Successfully created club",
+  "successCreateExercise": "Successfully to create exercise",
+  "successCreateProgram": "Successfully create program",
+  "successLogout": "Successfully logged out",
+  "successSignIn": "Successfully signed in ",
+  "successSignUp": "Successfully signed up ",
+  "successUpdateExercises": "Successfully update exercises",
+  "system": "System",
+  "tactical": "Tactical",
+  "theme": "Theme",
+  "updateClub": "Update Club",
   "upload": "Upload",
-  "editClub": "Edit Club"
+  "user": "User",
+  "volleyBall": "Volleyball"
 }
