--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -1,103 +1,113 @@
 {
   "@@locale": "id",
-  "hello": "Halo",
-  "signIn": "Masuk",
-  "logout": "Keluar",
-  "signUp": "Daftar",
+  "about": "Tentang",
+  "activeSession": "Aktif",
+  "add": "Tambah",
+  "addMember": "Tambahkan Anggota",
+  "alreadyHaveAnAccount": "Sudah punya akun?",
+  "assets": "Asset",
+  "athlete": "Atlet",
+  "athletes": "Atlet",
+  "back": "Kembali",
+  "basketBall": "Basket",
+  "calendar": "Kalender",
+  "cancel": "Batal",
+  "club": "Klub",
+  "clubDashboard": "Dasbor Klub",
+  "clubDescription": "Deskripsi Klub",
+  "clubDescriptionRequired": "Deskripsi klub wajib diisi",
+  "clubImageRequired": "Gambar klub wajib diisi",
+  "clubManagement": "Manajemen Klub",
+  "clubName": "Nama Klub",
+  "clubNameRequired": "Nama klub wajib diisi",
+  "clubs": "Klub",
+  "coach": "Pelatih",
+  "coaches": "Pelatih",
+  "create": "Buat",
+  "createClub": "Buat Klub",
+  "createProgram": "Buat Program",
+  "dark": "Mode Gelap",
+  "delete": "Hapus",
+  "detail": "Rincian",
+  "dontHaveAnAccount": "Belum punya akun?",
+  "download": "Unduh",
+  "edit": "Ubah",
+  "editProfile": "Ubah Profil",
+  "editProgram": "Ubah Program",
+  "emailRequired": "Email wajib diisi",
+  "endDate": "Tanggal Berakhir",
+  "endDateRequired": "Tanggal berakhir wajib diisi",
+  "english": "Bahasa Inggris",
+  "enterClubDescription": "Masukkan deskripsi klub",
+  "enterClubName": "Masukkan nama klub",
+  "enterEndDate": "Masukkan tanggal berakhir",
+  "enterProgramName": "Masukkan nama program",
+  "enterStartDate": "Masukkan tanggal dimulai",
+  "enterYourEmail": "Masukkan email anda",
+  "enterYourName": "Masukkan nama anda",
+  "enterYourPass": "Masukkan kata sandi anda",
+  "enterYourPhoneNumber": "Masukkan nomor telepon anda",
+  "errorCreateExercise": "Gagal membuat latihan",
+  "establishedAt": "Didirikan pada :",
+  "exam": "Tes",
+  "exams": "Tes",
+  "exercise": "Latihan",
+  "expiredSession": "Kadaluarsa",
+  "failedCreateClub": "Gagal membuat klub",
+  "failedCreateProgram": "Gagal membuat program",
+  "failedEditProgram": "Gagal mengubah program",
+  "failedLeaveClub": "Gagal meninggalkan klub",
+  "failedLogout": "Gagal keluar",
   "failedSignIn": "Gagal masuk",
   "failedSignUp": "Gagal daftar",
-  "failedLogout": "Gagal keluar",
-  "successSignIn": "Berhasil masuk",
-  "successSignUp": "Berhasil daftar",
-  "successlogout": "Berhasil keluar",
-  "successCreateClub": "Berhasil membuat klub",
-  "failedCreateClub": "Gagal membuat klub",
-  "alreadyHaveAnAccount": "Sudah punya akun?",
-  "dontHaveAnAccount": "Belum punya akun?",
+  "futsal": "Futsal",
+  "general": "Umum",
+  "handBall": "Bola Tangan",
+  "hello": "Halo",
+  "history": "Riwayat",
+  "indonesian": "Bahasa Indonesia",
+  "invalidEmail": "Email tidak valid",
+  "invalidPhoneNumber": "Nomor telepon tidak valid",
+  "invite": "Undang",
+  "join": "Gabung",
+  "kick": "Hapus",
+  "language": "Bahasa",
+  "leave": "Keluar",
+  "leaveClubSuccess": "Berhasil meninggalkan klub",
+  "light": "Mode Terang",
+  "logout": "Keluar",
+  "management": "Manajemen",
+  "members": "Anggota",
+  "myClubTraining": "Pelatihan Klub Saya",
+  "name": "Nama",
+  "nameRequired": "Nama wajib diisi",
+  "newProgram": "Program Baru",
+  "noClubsFound": "Tidak ada club yang ditemukan",
+  "noEvents": "Tidak ada kegiatan",
+  "noExpertise": "Tidak memiliki keahlian",
+  "noMembersFound": "Anggota tidak ditemukan",
+  "noUsersFound": "Pengguna tidak ditemukan",
   "or": "atau",
-  "clubName": "Nama Klub",
-  "clubDescription": "Deskripsi Klub",
-  "clubNameRequired": "Nama klub wajib diisi",
-  "clubDescriptionRequired": "Deskripsi klub wajib diisi",
-  "enterClubName": "Masukkan nama klub",
-  "enterClubDescription": "Masukkan deskripsi klub",
-  "createClub": "Buat Klub",
-  "club": "Klub",
+  "overview": "Ringkasan",
+  "pageNotFound": "Halaman tidak ditemukan",
+  "passRequired": "Password wajib diisi",
+  "password": "Kata Sandi",
+  "phoneNumber": "Nomor Telepon",
+  "phoneNumberRequired": "Nomor telepon wajib diisi",
+  "program": "Program",
+  "programDetail": "Detail Program",
+  "programNameRequired": "Nama program wajib diisi",
+  "programs": "Program",
+  "question": "Pertanyaan",
+  "search": "Cari",
+  "session": "Sesi",
+  "settings": "Pengaturan",
+  "signIn": "Masuk",
+  "signUp": "Daftar",
+  "soccer": "Sepak Bola",
   "sport": "Olahraga",
   "sportType": "Jenis Olahraga",
-  "volleyBall": "Voli",
-  "basketBall": "Basket",
-  "handBall": "Bola Tangan",
-  "soccer": "Sepak Bola",
-  "futsal": "Futsal",
-  "detail": "Rincian",
-  "back": "Kembali",
-  "join": "Gabung",
-  "session": "Sesi",
-  "activeSession": "Aktif",
-  "expiredSession": "Kadaluarsa",
-  "management": "Manajemen",
-  "settings": "Pengaturan",
-  "edit": "Ubah",
-  "delete": "Hapus",
-  "leave": "Keluar",
-  "about": "Tentang",
-  "search": "Cari",
-  "clubImageRequired": "Gambar klub wajib diisi",
-  "successCreateProgram": "Berhasil membuat program",
-  "failedCreateProgram": "Gagal membuat program",
-  "successCreateExercise": "Berhasil membuat latihan",
-  "errorCreateExercise": "Gagal membuat latihan",
-  "myClubTraining": "Pelatihan Klub Saya",
-  "noClubsFound": "Tidak ada club yang ditemukan",
-  "download": "Unduh",
-  "general": "Umum",
-  "language": "Bahasa",
-  "indonesian": "Bahasa Indonesia",
-  "english": "Bahasa Inggris",
-  "theme": "Tema",
-  "system": "Sistem",
-  "light": "Mode Terang",
-  "dark": "Mode Gelap",
-  "user": "Pengguna",
-  "editProfile": "Ubah Profil",
-  "clubDashboard": "Dasbor Klub",
-  "noExpertise": "Tidak memiliki keahlian",
-  "clubManagement": "Manajemen Klub",
-  "name": "Nama",
-  "enterYourName": "Masukkan nama anda",
-  "nameRequired": "Nama wajib diisi",
-  "enterYourEmail": "Masukkan email anda",
-  "emailRequired": "Email wajib diisi",
-  "invalidEmail": "Email tidak valid",
-  "password": "Kata Sandi",
-  "enterYourPass": "Masukkan kata sandi anda",
-  "passRequired": "Password wajib diisi",
-  "phoneNumber": "Nomor Telepon",
-  "enterYourPhoneNumber": "Masukkan nomor telepon anda",
-  "phoneNumberRequired": "Nomor telepon wajib diisi",
-  "invalidPhoneNumber": "Nomor telepon tidak valid",
-  "history": "Riwayat",
-  "overview": "Ringkasan",
-  "clubs": "Klub",
-  "members": "Anggota",
-  "programs": "Program",
-  "exams": "Tes",
-  "program":"Program",
-  "exam": "Tes",
-  "tactical": "Taktis",
-  "invite": "Undang",
-  "assets": "Asset",
-  "leaveClubSuccess": "Berhasil meninggalkan klub",
-  "failedLeaveClub": "Gagal meninggalkan klub",
-  "establishedAt": "Didirikan pada :",
-  "calendar": "Kalender",
-  "noEvents": "Tidak ada kegiatan",
-  "newProgram": "Program Baru",
-  "enterProgramName": "Masukkan nama program",
-  "programNameRequired": "Nama program wajib diisi",
   "startDate": "Tanggal Mulai",
-  "enterStartDate": "Masukkan tanggal dimulai",
   "startDateRequired": "Tanggal mulai wajib diisi",
   "endDate": "Tanggal Berakhir",
   "enterEndDate": "Masukkan tanggal berakhir",
@@ -117,6 +127,5 @@
   "kick": "Hapus",
   "exercise": "Latihan",
   "question": "Pertanyaan",
-  "upload": "Unggah",
-  "editClub": "Ubah Klub"
+  "upload": "Unggah"
 }
