--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -44,9 +44,11 @@
   "enterProgramName": "Masukkan nama program",
   "enterStartDate": "Masukkan tanggal dimulai",
   "enterYourEmail": "Masukkan email anda",
+  "enterYourGender": "Pilih jenis kelamin anda",
   "enterYourName": "Masukkan nama anda",
   "enterYourPass": "Masukkan kata sandi anda",
   "enterYourPhoneNumber": "Masukkan nomor telepon anda",
+  "enterYourUsername": "Masukkan nama pengguna anda",
   "errorCreateExercise": "Gagal membuat latihan",
   "establishedAt": "Didirikan pada :",
   "exam": "Tes",
@@ -61,6 +63,8 @@
   "failedSignIn": "Gagal masuk",
   "failedSignUp": "Gagal daftar",
   "futsal": "Futsal",
+  "gender": "Jenis Kelamin",
+  "genderRequired": "Jenis kelamin wajib diisi",
   "general": "Umum",
   "handBall": "Bola Tangan",
   "hello": "Halo",
@@ -90,12 +94,12 @@
   "or": "atau",
   "overview": "Ringkasan",
   "pageNotFound": "Halaman tidak ditemukan",
-  "passRequired": "Password wajib diisi",
+  "passRequired": "Kata sandi wajib diisi",
   "password": "Kata Sandi",
   "phoneNumber": "Nomor Telepon",
   "phoneNumberRequired": "Nomor telepon wajib diisi",
   "program": "Program",
-  "programDetail": "Detail Program",
+  "programDetail": "Rincian Program",
   "programNameRequired": "Nama program wajib diisi",
   "programs": "Program",
   "question": "Pertanyaan",
@@ -109,23 +113,21 @@
   "sportType": "Jenis Olahraga",
   "startDate": "Tanggal Mulai",
   "startDateRequired": "Tanggal mulai wajib diisi",
-  "endDate": "Tanggal Berakhir",
-  "enterEndDate": "Masukkan tanggal berakhir",
-  "endDateRequired": "Tanggal berakhir wajib diisi",
-  "createProgram": "Buat Program",
-  "editProgram": "Ubah Program",
-  "cancel": "Batal",
-  "create": "Buat",
-  "noUsersFound": "Pengguna tidak ditemukan",
-  "addMember": "Tambahkan Anggota",
-  "noMembersFound": "Anggota tidak ditemukan",
-  "athlete": "Atlet",
-  "athletes": "Atlet",
-  "coach": "Pelatih",
-  "coaches": "Pelatih",
-  "add": "Tambah",
-  "kick": "Hapus",
-  "exercise": "Latihan",
-  "question": "Pertanyaan",
-  "upload": "Unggah"
+  "succesEditProgram": "Berhasil mengubah program",
+  "successCreateClub": "Berhasil membuat club",
+  "successCreateExercise": "Berhasil membuat latihan",
+  "successCreateProgram": "Berhasil membuat program",
+  "successLogout": "Berhasil keluar",
+  "successSignIn": "Berhasil masuk ",
+  "successSignUp": "Berhasil daftar",
+  "successUpdateExercises": "Berhasil mengubah latihan",
+  "system": "Sistem",
+  "tactical": "Taktis",
+  "theme": "Tema",
+  "updateClub": "Ubah Club",
+  "upload": "Unggah",
+  "user": "Pengguna",
+  "username": "Nama Penguna",
+  "usernameRequired": "Nama penguna wajib diisi",
+  "volleyBall": "Voli"
 }
