fix: 🐛 fix typo named in ln10n

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -32,6 +32,7 @@
   "dontHaveAnAccount": "Don\t have an account?",
   "download": "Download",
   "edit": "Edit",
+  "editClub": "Edit Club",
   "editProfile": "Edit Profile",
   "editProgram": "Edit Program",
   "emailRequired": "Email is required",
@@ -67,7 +68,7 @@
   "genderRequired": "Gender is required",
   "general": "General",
   "handBall": "Handball",
-  "hello": "Hello",
+  "hello": "Hello,",
   "history": "History",
   "indonesian": "Indonesian",
   "invalidEmail": "Invalid email",
@@ -82,7 +83,7 @@
   "logout": "Logout",
   "management": "Management",
   "members": "Members",
-  "myClubTraining": "My Club Training",
+  "myClub": "My Club",
   "name": "Name",
   "nameRequired": "Name is required",
   "newProgram": "New Program",
@@ -109,7 +110,7 @@
   "signIn": "Sign In",
   "signUp": "Sign Up",
   "soccer": "Soccer",
-  "sport": "Sport",
+  "sport": "Sport :",
   "sportType": "Sport Type",
   "startDate": "Start Date",
   "startDateRequired": "Start date is required",
