--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -32,6 +32,7 @@
   "dontHaveAnAccount": "Belum punya akun?",
   "download": "Unduh",
   "edit": "Ubah",
+  "editClub": "Ubah Klub",
   "editProfile": "Ubah Profil",
   "editProgram": "Ubah Program",
   "emailRequired": "Email wajib diisi",
@@ -67,7 +68,7 @@
   "genderRequired": "Jenis kelamin wajib diisi",
   "general": "Umum",
   "handBall": "Bola Tangan",
-  "hello": "Halo",
+  "hello": "Halo,",
   "history": "Riwayat",
   "indonesian": "Bahasa Indonesia",
   "invalidEmail": "Email tidak valid",
@@ -82,11 +83,11 @@
   "logout": "Keluar",
   "management": "Manajemen",
   "members": "Anggota",
-  "myClubTraining": "Pelatihan Klub Saya",
+  "myClub": "Klub Saya",
   "name": "Nama",
   "nameRequired": "Nama wajib diisi",
   "newProgram": "Program Baru",
-  "noClubsFound": "Tidak ada club yang ditemukan",
+  "noClubsFound": "Tidak ada klub yang ditemukan",
   "noEvents": "Tidak ada kegiatan",
   "noExpertise": "Tidak memiliki keahlian",
   "noMembersFound": "Anggota tidak ditemukan",
@@ -109,7 +110,7 @@
   "signIn": "Masuk",
   "signUp": "Daftar",
   "soccer": "Sepak Bola",
-  "sport": "Olahraga",
+  "sport": "Olahraga :",
   "sportType": "Jenis Olahraga",
   "startDate": "Tanggal Mulai",
   "startDateRequired": "Tanggal mulai wajib diisi",
