feat: 🎸 add edit profile ui

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -126,6 +126,7 @@
   "tactical": "Tactical",
   "theme": "Theme",
   "updateClub": "Update Club",
+  "updateProfile": "Update Profile",
   "upload": "Upload",
   "user": "User",
   "username": "Username",
