--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -125,7 +125,8 @@
   "system": "Sistem",
   "tactical": "Taktis",
   "theme": "Tema",
-  "updateClub": "Ubah Club",
+  "updateClub": "Perbarui Club",
+  "updateProfile": "Perbarui Profil",
   "upload": "Unggah",
   "user": "Pengguna",
   "username": "Nama Penguna",
